[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-paradox"
version = "1.7.0"
description = "Paradox AntiCheat - A comprehensive anti-cheat system for Endstone Bedrock servers"
requires-python = ">=3.9"
dependencies = [
    "endstone>=0.11",
    "bedrock-protocol-packets",
    "flask>=3.0",
]

[project.entry-points."endstone"]
paradox = "endstone_paradox:ParadoxPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_paradox"]

[tool.endstone]
name = "ParadoxAC"
version = "1.7.0"
api = "0.11"
description = "Paradox AntiCheat - Comprehensive anti-cheat and moderation system"
authors = ["Paradox Team"]
website = "https://github.com/paradox-anticheat"
prefix = "ParadoxAC"
load = "POSTWORLD"

[tool.endstone.commands]
# === Moderation Commands ===
"ac-op" = { description = "Grant security clearance with password", usages = ["/ac-op <password: str>"], permissions = ["paradox.op"] }
"ac-deop" = { description = "Revoke security clearance", usages = ["/ac-deop [player: player]"], permissions = ["paradox.deop"] }
"ac-ban" = { description = "Ban a player", usages = ["/ac-ban <player: player> [reason: str]"], permissions = ["paradox.ban"] }
"ac-unban" = { description = "Unban a player", usages = ["/ac-unban <name: str>"], permissions = ["paradox.unban"] }
"ac-kick" = { description = "Kick a player", usages = ["/ac-kick <player: player> [reason: str]"], permissions = ["paradox.kick"] }
"ac-freeze" = { description = "Freeze/unfreeze a player", usages = ["/ac-freeze <player: player>"], permissions = ["paradox.freeze"] }
"ac-vanish" = { description = "Toggle admin invisibility", usages = ["/ac-vanish"], permissions = ["paradox.vanish"] }
"ac-lockdown" = { description = "Toggle server lockdown mode", usages = ["/ac-lockdown"], permissions = ["paradox.lockdown"] }
"ac-punish" = { description = "Punish a player", usages = ["/ac-punish <player: player> <action: str>"], permissions = ["paradox.punish"] }
"ac-tpa" = { description = "Send teleport request", usages = ["/ac-tpa <player: player>"], permissions = ["paradox.tpa"] }
"ac-allowlist" = { description = "Manage allow list", usages = ["/ac-allowlist <add|remove|list> [player: str]"], permissions = ["paradox.allowlist"] }
"ac-whitelist" = { description = "Manage whitelist", usages = ["/ac-whitelist <add|remove|list> [player: str]"], permissions = ["paradox.whitelist"] }
"ac-opsec" = { description = "Security dashboard", usages = ["/ac-opsec"], permissions = ["paradox.opsec"] }
"ac-despawn" = { description = "Remove entities", usages = ["/ac-despawn [type: str] [radius: int]"], permissions = ["paradox.despawn"] }
"ac-modules" = { description = "Module status dashboard", usages = ["/ac-modules"], permissions = ["paradox.modules"] }
"ac-spooflog" = { description = "View namespoof logs", usages = ["/ac-spooflog"], permissions = ["paradox.spooflog"] }
"ac-command" = { description = "Enable/disable commands", usages = ["/ac-command <enable|disable> <command: str>"], permissions = ["paradox.command"] }
"ac-prefix" = { description = "Change command prefix display", usages = ["/ac-prefix [prefix: str]"], permissions = ["paradox.prefix"] }

# === Settings Commands ===
"ac-fly" = { description = "Toggle fly detection", usages = ["/ac-fly"], permissions = ["paradox.settings"] }
"ac-killaura" = { description = "Toggle killaura detection", usages = ["/ac-killaura"], permissions = ["paradox.settings"] }
"ac-reach" = { description = "Toggle reach detection", usages = ["/ac-reach"], permissions = ["paradox.settings"] }
"ac-autoclicker" = { description = "Toggle autoclicker detection", usages = ["/ac-autoclicker [maxcps: int]"], permissions = ["paradox.settings"] }
"ac-scaffold" = { description = "Toggle scaffold detection", usages = ["/ac-scaffold"], permissions = ["paradox.settings"] }
"ac-xray" = { description = "Toggle xray detection", usages = ["/ac-xray"], permissions = ["paradox.settings"] }
"ac-gamemode" = { description = "Toggle gamemode detection", usages = ["/ac-gamemode"], permissions = ["paradox.settings"] }
"ac-afk" = { description = "Toggle/configure AFK detection", usages = ["/ac-afk [timeout: int]"], permissions = ["paradox.settings"] }
"ac-vision" = { description = "Toggle vision detection", usages = ["/ac-vision"], permissions = ["paradox.settings"] }
"ac-worldborder" = { description = "Configure world border", usages = ["/ac-worldborder [radius: int] [x: int] [z: int]"], permissions = ["paradox.settings"] }
"ac-lagclear" = { description = "Toggle/configure lag clear", usages = ["/ac-lagclear [interval: int]"], permissions = ["paradox.settings"] }
"ac-ratelimit" = { description = "Toggle rate limiting", usages = ["/ac-ratelimit"], permissions = ["paradox.settings"] }
"ac-namespoof" = { description = "Toggle namespoof detection", usages = ["/ac-namespoof"], permissions = ["paradox.settings"] }
"ac-packetmonitor" = { description = "Toggle packet monitor", usages = ["/ac-packetmonitor"], permissions = ["paradox.settings"] }

# === Utility Commands ===
"ac-home" = { description = "Set/teleport to home locations", usages = ["/ac-home [set|delete|list] [name: str]"], permissions = ["paradox.home"] }
"ac-tpr" = { description = "Random teleport", usages = ["/ac-tpr [radius: int]"], permissions = ["paradox.tpr"] }
"ac-invsee" = { description = "View player inventory", usages = ["/ac-invsee <player: player>"], permissions = ["paradox.invsee"] }
"ac-pvp" = { description = "Toggle PvP", usages = ["/ac-pvp"], permissions = ["paradox.pvp"] }
"ac-channels" = { description = "Private chat channels", usages = ["/ac-channels <create|join|leave|list|send> [name: str] [message: str]"], permissions = ["paradox.channels"] }
"ac-rank" = { description = "Player rank management", usages = ["/ac-rank <player: player> [rank: str]"], permissions = ["paradox.rank"] }
"ac-debug-db" = { description = "Inspect/modify SQLite database", usages = ["/ac-debug-db <table: str> [key: str] [value: str]"], permissions = ["paradox.debugdb"] }
"ac-gui" = { description = "Open Paradox GUI menu", usages = ["/ac-gui"], permissions = ["paradox.gui"] }
"ac-about" = { description = "About Paradox AntiCheat", usages = ["/ac-about"], permissions = ["paradox.about"] }

[tool.endstone.permissions]
"paradox.op" = { description = "Use /ac-op command", default = true }
"paradox.deop" = { description = "Use /ac-deop command", default = "op" }
"paradox.ban" = { description = "Use /ac-ban command", default = "op" }
"paradox.unban" = { description = "Use /ac-unban command", default = "op" }
"paradox.kick" = { description = "Use /ac-kick command", default = "op" }
"paradox.freeze" = { description = "Use /ac-freeze command", default = "op" }
"paradox.vanish" = { description = "Use /ac-vanish command", default = "op" }
"paradox.lockdown" = { description = "Use /ac-lockdown command", default = "op" }
"paradox.punish" = { description = "Use /ac-punish command", default = "op" }
"paradox.tpa" = { description = "Use /ac-tpa command", default = true }
"paradox.allowlist" = { description = "Use /ac-allowlist command", default = "op" }
"paradox.whitelist" = { description = "Use /ac-whitelist command", default = "op" }
"paradox.opsec" = { description = "Use /ac-opsec command", default = "op" }
"paradox.despawn" = { description = "Use /ac-despawn command", default = "op" }
"paradox.modules" = { description = "Use /ac-modules command", default = "op" }
"paradox.spooflog" = { description = "Use /ac-spooflog command", default = "op" }
"paradox.command" = { description = "Use /ac-command command", default = "op" }
"paradox.prefix" = { description = "Use /ac-prefix command", default = "op" }
"paradox.settings" = { description = "Use settings commands", default = "op" }
"paradox.home" = { description = "Use /ac-home command", default = true }
"paradox.tpr" = { description = "Use /ac-tpr command", default = true }
"paradox.invsee" = { description = "Use /ac-invsee command", default = "op" }
"paradox.pvp" = { description = "Use /ac-pvp command", default = true }
"paradox.channels" = { description = "Use /ac-channels command", default = true }
"paradox.rank" = { description = "Use /ac-rank command", default = "op" }
"paradox.debugdb" = { description = "Use /ac-debug-db command", default = "op" }
"paradox.gui" = { description = "Use /ac-gui command", default = "op" }
"paradox.about" = { description = "Use /ac-about command", default = true }
